# rust-workspace

./: Cargo.toml  README
shared_models/: Cargo.toml
shared_models/src/: lib.rs
src/: handlers.rs  main.rs
xata_client/: Cargo.toml
xata_client/src/: lib.rs
