workspace = { members = ["shared_models", "xata_client"] }
[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
#add workspaces below
shared_models = { path = "./shared_models" } 
xata_client = { path = "./xata_client" }
